# corso-python-26

./: .gitignore  README.md
homework-1/: homework-exe1.ipynb  homework-sol1.ipynb
homework-2/: ex2.2_mock_data.csv  homework-exe2.ipynb  homework-sol2.ipynb
homework-3/: homework-exe3.ipynb  homework-sol3.ipynb
lezione-2/: lezione-2.ipynb
lezione-3/: lezione-3.ipynb
lezione-4/: lezione-4.sh
lezione-5/code/: how_requests_works.py  main.py
lezione-5/code/somewhere/weda/: pyproject.toml
lezione-5/code/somewhere/weda/src/weda/: gemini_manager.py  scraping.py
lezione-5/code/somewhere/weda/src/weda/data/: prompt.txt
lezione-6/: lezione-6.ipynb
lezione-6/data/: meteo_Firenze_2025_Agosto.csv  meteo_Firenze_2025_Dicembre.csv  meteo_Firenze_2025_Novembre.csv  meteo_Firenze_2025_Ottobre.csv  meteo_Firenze_2025_Settembre.csv  meteo_Milano_2025_Agosto.csv  meteo_Milano_2025_Dicembre.csv  meteo_Milano_2025_Novembre.csv  meteo_Milano_2025_Ottobre.csv  meteo_Milano_2025_Settembre.csv  meteo_Napoli_2025_Agosto.csv  meteo_Napoli_2025_Dicembre.csv  meteo_Napoli_2025_Novembre.csv  meteo_Napoli_2025_Ottobre.csv  meteo_Napoli_2025_Settembre.csv  meteo_Palermo_2025_Agosto.csv  meteo_Palermo_2025_Dicembre.csv  meteo_Palermo_2025_Novembre.csv  meteo_Palermo_2025_Ottobre.csv  meteo_Palermo_2025_Settembre.csv  meteo_Roma_2025_Agosto.csv  meteo_Roma_2025_Dicembre.csv  meteo_Roma_2025_Novembre.csv  meteo_Roma_2025_Ottobre.csv  meteo_Roma_2025_Settembre.csv  meteo_Torino_2025_Agosto.csv  meteo_Torino_2025_Dicembre.csv  meteo_Torino_2025_Novembre.csv  meteo_Torino_2025_Ottobre.csv  (+6 more)
